Complete CerberusChain Website Fix

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </ul>
 
       <div class="nav-socials">
-        <a href="https://x.com/tonyjamestaub" target="_blank" class="social-btn">
+        <a href="https://x.com/tonyjamestaub" target="_blank" rel="noopener" class="social-btn">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
           </svg>
           <span>Follow Tony</span>
           <div class="btn-glow"></div>
         </a>
-        <a href="https://x.com/DaveSkorupski" target="_blank" class="social-btn">
+        <a href="https://x.com/DaveSkorupski" target="_blank" rel="noopener" class="social-btn">
           <svg viewBox="0 0 24 24" fill="currentColor">
             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
           </svg>
@@ -101,7 +101,7 @@
       </div>
 
       <div class="hero-buttons">
-        <a href="whitepaper.pdf" target="_blank" class="btn btn-primary">
+        <a href="whitepaper.pdf" target="_blank" rel="noopener" class="btn btn-primary">
           <span>Launch Trading Bot</span>
           <div class="btn-particles"></div>
         </a>
@@ -403,7 +403,7 @@
       </div>
 
       <div class="community-grid">
-        <a href="https://discord.gg/5CbPC7Rg" target="_blank" class="community-card discord">
+        <a href="https://discord.gg/5CbPC7Rg" target="_blank" rel="noopener" class="community-card discord">
           <div class="card-bg"></div>
           <div class="card-icon">
             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -416,7 +416,7 @@
           <div class="card-glow"></div>
         </a>
 
-        <a href="https://t.me/CerberusChain" target="_blank" class="community-card telegram">
+        <a href="https://t.me/CerberusChain" target="_blank" rel="noopener" class="community-card telegram">
           <div class="card-bg"></div>
           <div class="card-icon">
             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -429,7 +429,7 @@
           <div class="card-glow"></div>
         </a>
 
-        <a href="https://x.com/tonyjamestaub" target="_blank" class="community-card twitter">
+        <a href="https://x.com/tonyjamestaub" target="_blank" rel="noopener" class="community-card twitter">
           <div class="card-bg"></div>
           <div class="card-icon">
             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -447,11 +447,11 @@
         <h3>Ready to Join the Revolution?</h3>
         <p>Get exclusive access to our trading bot and join thousands of successful traders</p>
         <div class="cta-buttons">
-          <a href="whitepaper.pdf" target="_blank" class="btn btn-primary">
+          <a href="whitepaper.pdf" target="_blank" rel="noopener" class="btn btn-primary">
             <span>Download Whitepaper</span>
             <div class="btn-particles"></div>
           </a>
-          <a href="https://discord.gg/5CbPC7Rg" target="_blank" class="btn btn-secondary">
+          <a href="https://discord.gg/5CbPC7Rg" target="_blank" rel="noopener" class="btn btn-secondary">
             <span>Join Discord</span>
             <div class="btn-border"></div>
           </a>
@@ -475,16 +475,16 @@
         <div class="footer-links">
           <div class="link-group">
             <h4>Platform</h4>
-            <a href="whitepaper.pdf" target="_blank">Whitepaper</a>
+            <a href="whitepaper.pdf" target="_blank" rel="noopener">Whitepaper</a>
             <a href="#features">Features</a>
             <a href="#roadmap">Roadmap</a>
           </div>
           
           <div class="link-group">
             <h4>Community</h4>
-            <a href="https://discord.gg/5CbPC7Rg" target="_blank">Discord</a>
-            <a href="https://t.me/CerberusChain" target="_blank">Telegram</a>
-            <a href="https://x.com/tonyjamestaub" target="_blank">Twitter</a>
+            <a href="https://discord.gg/5CbPC7Rg" target="_blank" rel="noopener">Discord</a>
+            <a href="https://t.me/CerberusChain" target="_blank" rel="noopener">Telegram</a>
+            <a href="https://x.com/tonyjamestaub" target="_blank" rel="noopener">Twitter</a>
           </div>
           
           <div class="link-group">
@@ -498,9 +498,9 @@
       <div class="footer-bottom">
         <p>&copy; 2025 CerberusChain. Coded by veterans, for traders.</p>
         <div class="footer-socials">
-          <a href="https://discord.gg/5CbPC7Rg" target="_blank">Discord</a>
-          <a href="https://t.me/CerberusChain" target="_blank">Telegram</a>
-          <a href="https://x.com/tonyjamestaub" target="_blank">Twitter</a>
+          <a href="https://discord.gg/5CbPC7Rg" target="_blank" rel="noopener">Discord</a>
+          <a href="https://t.me/CerberusChain" target="_blank" rel="noopener">Telegram</a>
+          <a href="https://x.com/tonyjamestaub" target="_blank" rel="noopener">Twitter</a>
         </div>
       </div>
     </div>
